--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://www.rightisleft.com
 environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
+#Server Dependencies
   json_object: "1.0.19"
   mongo_dart: "0.1.46"
   connection_pool: "0.1.0+2"
@@ -14,5 +15,10 @@ dependencies:
   shelf: '>=0.6.2 <0.7.0'
   shelf_static: "0.2.2"
   shelf_route: 0.13.0
+#Client Dependencies
+  bootjack: "0.6.5"
+  browser: ">=0.10.0+2 <0.11.0"
+  sass: "0.4.2"
 transformers:
 - dartson
+- sass
