--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   unittest: any
 transformers:
 - dartson
-- sass
+- sass:
+    executable:
+      sassc
 - angular2:
     entry_points:
         - web/main.dart
