--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,10 @@ dependencies:
 #Server Dependencies
   barback: ^0.15.2
   json_object: "1.0.19"
-  mongo_dart: "0.1.46"
+  mongo_dart: "0.2.4"
   connection_pool: "0.1.0+2"
-  dartson: "0.2.4"
+  dartson:
+    git: "git@github.com:rightisleft/dartson.git"
   guinness: "0.1.17"
   html: "0.12.2"
   shelf: '>=0.6.2 <0.7.0'
